--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "author": "chris48s",
   "main": "./lib/index.js",
   "exports": "./lib/index.js",
+  "files": [
+    "lib/**/*",
+    "CHANGELOG.md"
+  ],
   "scripts": {
     "lint": "npm-run-all \"lint:*\"",
     "lint:eslint-docs": "npm-run-all \"update:eslint-docs -- --check\"",
